Update Starwars Survey Data Curation.ipynb

--- a/Starwars Survey Data Curation.ipynb
+++ b/Starwars Survey Data Curation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Author: Christian O. Themin\n",
+    "## Author: Christian Themin\n",
     "## Project: Starwars Movie Analysis with Python\n"
    ]
   },
