--- a/Olympics 2021/README
+++ b/Olympics 2021/README
@@ -1,1 +1,1 @@
-Some graphs are not showing up on the notebook due to the Plotly program that is not supported by Github.
+Some graphs are not showing on the notebook due to Plotly dynamic graph that is not supported by Github.
